# oralsim_gestao_inteligente

./: .gitignore  Dockerfile  LICENSE  ModeloCartaAmigavel.docx  ModeloCartaAmigavel1.docx  ModeloCartaAmigavel2.docx  README.md  asdasd.sh  docker-compose.yml  docker-entrypoint.sh  manage.py  pyproject.toml  ~$deloCartaAmigavel1.docx
config/: __init__.py  settings.py  structlog_config.py
libs/oralsin_core/: setup.py
libs/oralsin_core/adapters/api_clients/: base_api_client.py  oralsin_api_client.py
libs/oralsin_core/adapters/config/: composition_root.py
libs/oralsin_core/adapters/context/: request_context.py
libs/oralsin_core/adapters/message_broker/: rabbitmq.py  registration_pipeline_consumer.py  sync_consumer.py  tasks.py
libs/oralsin_core/adapters/observability/: decorators.py  metrics.py
libs/oralsin_core/adapters/repositories/: address_repo_impl.py  clinic_data_repo_impl.py  clinic_phone_repo_impl.py  clinic_repo_impl.py  contract_repo_impl.py  covered_clinic_repo_impl.py  installment_repo_impl.py  patient_phone_repo_impl.py  patient_repo_impl.py  payer_repo_impl.py  payment_method_repo_impl.py  user_clinic_repo_impl.py  user_repo_impl.py
libs/oralsin_core/adapters/security/: jwt_authentication.py  jwt_service.py
libs/oralsin_core/adapters/utils/: phone_utils.py
libs/oralsin_core/oralsin_core.egg-info/: PKG-INFO  SOURCES.txt
src/cobranca_inteligente_api/: apps.py  asgi.py  celery.py  tasks.py  urls.py  wsgi.py
src/cordial_billing/adapters/api_clients/: pipedrive_api_client.py
src/cordial_billing/adapters/config/: composition_root.py
src/cordial_billing/adapters/message_broker/: activity_consumer.py
src/cordial_billing/adapters/observability/: metrics.py
src/cordial_billing/adapters/repositories/: activity_repo_impl.py  collection_case_repo_impl.py  deal_repo_impl.py  org_repo_impl.py
src/notification_billing/adapters/config/: __init__.py  composition_root.py
src/plugins/django_interface/: admin.py  apps.py  models.py  permissions.py  request_middleware.py  routers.py  serializers.py  signals.py  urls.py
tests/: __init__.py  test_auth.py  test_notifications.py
tests/helpers/: __init__.py  patch_notifiers_if_mock.py
(+212 files in other folders)
