[tool.poetry]
name = "oralsin_gestao_inteligente"
version = "1.0.0"
description = "API em Django para gestão de recebíveis e cobrança amigável da Oralsin"
authors = ["PavCob"]
readme = ["README.md"]

[tool.poetry.dependencies]
python = "^3.13.3"
Django = "5.2.1"
djangorestframework = "3.16.0"
psycopg2 = "2.9.10"
bcrypt = "4.3.0"
PyJWT = "2.10.1"
drf-yasg = "1.21.10"
requests = "2.32.3"
python-decouple = "3.8"
python-dotenv = "1.1.0"
cryptography = "44.0.3"
mailchimp_transactional = "1.0.56"
sendgrid = "6.12.2"
django_prometheus = "2.3.1"
celery = "5.5.2"
django-cors-headers = "4.7.0"
channels = "4.2.2"
channels-redis = "4.2.1"
daphne = "^4.1.2"
twisted = {extras = ["http2", "tls"], version = "^24.11.0"}
whitenoise = "^6.9.0"
uvicorn = "^0.34.2"
prometheus-client = "0.21.1"
psutil = "^7.0.0"
pydantic = {extras = ["email"], version = "^2.11.4"}
structlog = "^25.3.0"
punq = "^0.7.0"
backoff = "^2.2.1"
httpx = "^0.28.1"
django-stubs = "^5.2.0"
djangorestframework-stubs = "^3.16.0"
dependency-injector = "^4.46.0"
redis = "^6.1.0"
pika = "^1.3.2"
starlette = "^0.46.2"
drf-spectacular = "^0.28.0"
oralsin_core = { path = "libs/oralsin_core" }
sqlalchemy = "^2.0.41"
asyncpg = "^0.30.0"
django-extensions = "^4.1"
django-celery-beat = "^2.8.1"

[[tool.poetry.packages]]
include = "oralsin_core"
from = "libs"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.5"
pytest-django = "4.11.1"
ruff = "0.11.10"
mypy = "1.15.0"
types-requests = "^2.32"

[tool.ruff]
line-length = 250
target-version = "py313"
select = ["E", "F", "I", "PL", "B", "SIM", "UP"]
exclude = ["tests/*", "migrations/*"]

[tool.django-stubs]
django_settings_module = "config.settings"
strict_settings = true

[tool.mypy]
python_version = "3.13.3"
plugins = [
    "pydantic.mypy",
    "mypy_django_plugin.main",
    "mypy_drf_plugin.main"
]
strict = true
ignore_missing_imports = true
disable_error_code = "attr-defined"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
